<resources>
    <string name="app_name">My Food Eat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_food">Food</string>
    <string name="menu_drinks">Drinks</string>
    <string name="cart">Your Order</string>
    <string name="logo">logo</string>
    <string name="item_image">Item Image</string>
    <string name="item_description">Item Description</string>
    <string name="item_cost">Item Cost</string>
    <string name="dollar_sign">$  %s</string>
    <string name="item_added">Item added to order</string>
    <string name="menu_customize">Customize</string>
    <string name="add_to_order">Add to Order</string>
    <string name="order_total">Total $ %s</string>
    <string name="place_order">Place Order</string>
    <string name="your_food_is_ready">Your food is ready!</string>
    <string name="food_ready_logo">Food ready logo</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="photo_of_the_item">Photo of the item</string>
    <string name="my_food_eat_logo">My food eat logo</string>
    <string name="loading_image">Loading image</string>
</resources>