<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfoodeat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.myfoodeat.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_drinks"
        android:name="com.example.myfoodeat.ui.drinks.DrinksFragment"
        android:label="@string/menu_drinks"
        tools:layout="@layout/fragment_drinks" />
</navigation>